Fixing The hero section problem on mobile screen

--- a/media.css
+++ b/media.css
@@ -18,6 +18,7 @@
   .showcase {
     flex-direction: column;
     text-align: center;
+    padding-bottom: 50px;
   }
   .showcase > * {
     width: 100%;
@@ -27,7 +28,8 @@
     font-size: 20px;
   }
   .showcase .title h1 {
-    font-size: 9rem;
+    font-size: 7rem;
+    margin-bottom: -20px;
   }
   .toggler {
     display: block;
